// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should match the snapshot 1`] = `
<div
  className="alert alert-primary"
>
  <strong>
    Notice
    :
  </strong>
   This is a test of the Emergency Broadcast System. This is only a test.
</div>
`;

exports[`<Alert /> with children: value should match the snapshot 1`] = `
<div
  className="alert alert-primary"
>
  <dl>
    <dt>
      What lies beyond the furthest reaches of the sky?
    </dt>
    <dd>
      That which will lead the lost child back to her mother's arms. Exile.
    </dd>
  </dl>
</div>
`;

exports[`<Alert /> with dismissible: true should match the snapshot 1`] = `
<div
  className="alert alert-primary"
>
  <strong>
    Notice
    :
  </strong>
   This is a test of the Emergency Broadcast System. This is only a test.
  <AlertDismissButton
    dismissAlert={[MockFunction]}
    id="00000000-0000-0000-0000-000000000000"
  />
</div>
`;
